exp.output
Terminals which are not used

   APOS
   QUOT
   LOWER_THEN_SELMI
   LOWER_THEN_SELPL


State 41 conflicts: 10 shift/reduce


Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 Specifier: TYPE

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 VarDec: ID

   11 FuncDec: ID LP VarList RP
   12        | ID LP RP

   13 VarList: ParamDec
   14        | ParamDec COMMA VarList

   15 ParamDec: Specifier VarDec

   16 CompSt: LC DefList StmList RC

   17 StmList: /* empty */
   18        | Stmt StmList

   19 Stmt: Exp SEMI
   20     | CompSt
   21     | RETURN Exp SEMI
   22     | IF LP Exp RP Stmt
   23     | IF LP Exp RP Stmt ELSE Stmt
   24     | WHILE LP Exp RP Stmt

   25 DefList: /* empty */
   26        | Def DefList

   27 Def: Specifier DecList SEMI

   28 DecList: Dec
   29        | Dec COMMA DecList

   30 Dec: VarDec
   31    | VarDec ASSIGNOP Exp
   32    | ArrayDec
   33    | ArrayDec ASSIGNOP Exp

   34 ArrayDec: ID LS Exp RS
   35         | ID LS RS

   36 Exp: Exp ASSIGNOP Exp
   37    | Exp PLUEQU Exp
   38    | Exp MINEQU Exp
   39    | Exp STAEQU Exp
   40    | Exp DIVEQU Exp
   41    | Exp REMEQU Exp
   42    | Exp AND Exp
   43    | Exp OR Exp
   44    | Exp RELOP Exp
   45    | Exp PLUS Exp
   46    | Exp MINUS Exp
   47    | Exp STAR Exp
   48    | Exp DIV Exp
   49    | Exp REM Exp
   50    | LP Exp RP
   51    | MINUS Exp
   52    | NOT Exp
   53    | ID LP Args RP
   54    | ID LP RP
   55    | ID
   56    | INT
   57    | FLOAT
   58    | CHAR
   59    | Exp SELPL
   60    | Exp SELMI
   61    | SELPL Exp
   62    | SELMI Exp
   63    | LC Args RC

   64 Args: Exp COMMA Args
   65     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 6
INT (258) 56
ID (259) 10 11 12 34 35 53 54 55
RELOP (260) 44
TYPE (261) 7
FLOAT (262) 57
CHAR (263) 58
LP (264) 11 12 22 23 24 50 53 54
RP (265) 11 12 22 23 24 50 53 54
LC (266) 16 63
RC (267) 16 63
SEMI (268) 4 6 19 21 27
COMMA (269) 9 14 29 64
APOS (270)
QUOT (271)
LS (272) 34 35
RS (273) 34 35
PLUS (274) 45
MINUS (275) 46 51
STAR (276) 47
DIV (277) 48
REM (278) 49
SELPL (279) 59 61
SELMI (280) 60 62
ASSIGNOP (281) 31 33 36
AND (282) 42
OR (283) 43
NOT (284) 52
IF (285) 22 23
ELSE (286) 23
WHILE (287) 24
RETURN (288) 21
PLUEQU (289) 37
MINEQU (290) 38
STAEQU (291) 39
DIVEQU (292) 40
REMEQU (293) 41
UMINUS (294)
LOWER_THEN_SELMI (295)
LOWER_THEN_SELPL (296)
LOWER_THEN_ELSE (297)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
program (44)
    on left: 1, on right: 0
ExtDefList (45)
    on left: 2 3, on right: 1 3
ExtDef (46)
    on left: 4 5 6, on right: 3
Specifier (47)
    on left: 7, on right: 4 5 15 27
ExtDecList (48)
    on left: 8 9, on right: 4 9
VarDec (49)
    on left: 10, on right: 8 9 15 30 31
FuncDec (50)
    on left: 11 12, on right: 5
VarList (51)
    on left: 13 14, on right: 11 14
ParamDec (52)
    on left: 15, on right: 13 14
CompSt (53)
    on left: 16, on right: 5 20
StmList (54)
    on left: 17 18, on right: 16 18
Stmt (55)
    on left: 19 20 21 22 23 24, on right: 18 22 23 24
DefList (56)
    on left: 25 26, on right: 16 26
Def (57)
    on left: 27, on right: 26
DecList (58)
    on left: 28 29, on right: 27 29
Dec (59)
    on left: 30 31 32 33, on right: 28 29
ArrayDec (60)
    on left: 34 35, on right: 32 33
Exp (61)
    on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
    54 55 56 57 58 59 60 61 62 63, on right: 19 21 22 23 24 31 33 34
    36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 59 60 61 62
    64 65
Args (62)
    on left: 64 65, on right: 53 63 64


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


state 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


state 2

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


state 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 5
    Specifier   go to state 6


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 10

    ExtDecList  go to state 11
    VarDec      go to state 12
    FuncDec     go to state 13


state 7

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


state 10

   10 VarDec: ID .
   11 FuncDec: ID . LP VarList RP
   12        | ID . LP RP

    LP  shift, and go to state 14

    $default  reduce using rule 10 (VarDec)


state 11

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 15


state 12

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList

    COMMA  shift, and go to state 16

    $default  reduce using rule 8 (ExtDecList)


state 13

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 17

    CompSt  go to state 18


state 14

   11 FuncDec: ID LP . VarList RP
   12        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 19

    Specifier  go to state 20
    VarList    go to state 21
    ParamDec   go to state 22


state 15

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 16

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 23

    ExtDecList  go to state 24
    VarDec      go to state 12


state 17

   16 CompSt: LC . DefList StmList RC

    TYPE  shift, and go to state 2

    $default  reduce using rule 25 (DefList)

    Specifier  go to state 25
    DefList    go to state 26
    Def        go to state 27


state 18

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


state 19

   12 FuncDec: ID LP RP .

    $default  reduce using rule 12 (FuncDec)


state 20

   15 ParamDec: Specifier . VarDec

    ID  shift, and go to state 23

    VarDec  go to state 28


state 21

   11 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 29


state 22

   13 VarList: ParamDec .
   14        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 30

    $default  reduce using rule 13 (VarList)


state 23

   10 VarDec: ID .

    $default  reduce using rule 10 (VarDec)


state 24

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


state 25

   27 Def: Specifier . DecList SEMI

    ID  shift, and go to state 31

    VarDec    go to state 32
    DecList   go to state 33
    Dec       go to state 34
    ArrayDec  go to state 35


state 26

   16 CompSt: LC DefList . StmList RC

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    LP      shift, and go to state 40
    LC      shift, and go to state 41
    MINUS   shift, and go to state 42
    SELPL   shift, and go to state 43
    SELMI   shift, and go to state 44
    NOT     shift, and go to state 45
    IF      shift, and go to state 46
    WHILE   shift, and go to state 47
    RETURN  shift, and go to state 48

    $default  reduce using rule 17 (StmList)

    CompSt   go to state 49
    StmList  go to state 50
    Stmt     go to state 51
    Exp      go to state 52


state 27

   26 DefList: Def . DefList

    TYPE  shift, and go to state 2

    $default  reduce using rule 25 (DefList)

    Specifier  go to state 25
    DefList    go to state 53
    Def        go to state 27


state 28

   15 ParamDec: Specifier VarDec .

    $default  reduce using rule 15 (ParamDec)


state 29

   11 FuncDec: ID LP VarList RP .

    $default  reduce using rule 11 (FuncDec)


state 30

   14 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 20
    VarList    go to state 54
    ParamDec   go to state 22


state 31

   10 VarDec: ID .
   34 ArrayDec: ID . LS Exp RS
   35         | ID . LS RS

    LS  shift, and go to state 55

    $default  reduce using rule 10 (VarDec)


state 32

   30 Dec: VarDec .
   31    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 56

    $default  reduce using rule 30 (Dec)


state 33

   27 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 57


state 34

   28 DecList: Dec .
   29        | Dec . COMMA DecList

    COMMA  shift, and go to state 58

    $default  reduce using rule 28 (DecList)


state 35

   32 Dec: ArrayDec .
   33    | ArrayDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 59

    $default  reduce using rule 32 (Dec)


state 36

   56 Exp: INT .

    $default  reduce using rule 56 (Exp)


state 37

   53 Exp: ID . LP Args RP
   54    | ID . LP RP
   55    | ID .

    LP  shift, and go to state 60

    $default  reduce using rule 55 (Exp)


state 38

   57 Exp: FLOAT .

    $default  reduce using rule 57 (Exp)


state 39

   58 Exp: CHAR .

    $default  reduce using rule 58 (Exp)


state 40

   50 Exp: LP . Exp RP

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 62


state 41

   16 CompSt: LC . DefList StmList RC
   63 Exp: LC . Args RC

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    TYPE   shift, and go to state 2
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    INT       [reduce using rule 25 (DefList)]
    ID        [reduce using rule 25 (DefList)]
    FLOAT     [reduce using rule 25 (DefList)]
    CHAR      [reduce using rule 25 (DefList)]
    LP        [reduce using rule 25 (DefList)]
    LC        [reduce using rule 25 (DefList)]
    MINUS     [reduce using rule 25 (DefList)]
    SELPL     [reduce using rule 25 (DefList)]
    SELMI     [reduce using rule 25 (DefList)]
    NOT       [reduce using rule 25 (DefList)]
    $default  reduce using rule 25 (DefList)

    Specifier  go to state 25
    DefList    go to state 26
    Def        go to state 27
    Exp        go to state 63
    Args       go to state 64


state 42

   51 Exp: MINUS . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 65


state 43

   61 Exp: SELPL . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 66


state 44

   62 Exp: SELMI . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 67


state 45

   52 Exp: NOT . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 68


state 46

   22 Stmt: IF . LP Exp RP Stmt
   23     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 69


state 47

   24 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 70


state 48

   21 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 71


state 49

   20 Stmt: CompSt .

    $default  reduce using rule 20 (Stmt)


state 50

   16 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 72


state 51

   18 StmList: Stmt . StmList

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    LP      shift, and go to state 40
    LC      shift, and go to state 41
    MINUS   shift, and go to state 42
    SELPL   shift, and go to state 43
    SELMI   shift, and go to state 44
    NOT     shift, and go to state 45
    IF      shift, and go to state 46
    WHILE   shift, and go to state 47
    RETURN  shift, and go to state 48

    $default  reduce using rule 17 (StmList)

    CompSt   go to state 49
    StmList  go to state 73
    Stmt     go to state 51
    Exp      go to state 52


state 52

   19 Stmt: Exp . SEMI
   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . PLUEQU Exp
   38    | Exp . MINEQU Exp
   39    | Exp . STAEQU Exp
   40    | Exp . DIVEQU Exp
   41    | Exp . REMEQU Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   49    | Exp . REM Exp
   59    | Exp . SELPL
   60    | Exp . SELMI

    RELOP     shift, and go to state 74
    SEMI      shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    REM       shift, and go to state 80
    SELPL     shift, and go to state 81
    SELMI     shift, and go to state 82
    ASSIGNOP  shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    PLUEQU    shift, and go to state 86
    MINEQU    shift, and go to state 87
    STAEQU    shift, and go to state 88
    DIVEQU    shift, and go to state 89
    REMEQU    shift, and go to state 90


state 53

   26 DefList: Def DefList .

    $default  reduce using rule 26 (DefList)


state 54

   14 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 14 (VarList)


state 55

   34 ArrayDec: ID LS . Exp RS
   35         | ID LS . RS

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    RS     shift, and go to state 91
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 92


state 56

   31 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 93


state 57

   27 Def: Specifier DecList SEMI .

    $default  reduce using rule 27 (Def)


state 58

   29 DecList: Dec COMMA . DecList

    ID  shift, and go to state 31

    VarDec    go to state 32
    DecList   go to state 94
    Dec       go to state 34
    ArrayDec  go to state 35


state 59

   33 Dec: ArrayDec ASSIGNOP . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 95


state 60

   53 Exp: ID LP . Args RP
   54    | ID LP . RP

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    RP     shift, and go to state 96
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp   go to state 63
    Args  go to state 97


state 61

   63 Exp: LC . Args RC

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp   go to state 63
    Args  go to state 64


state 62

   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . PLUEQU Exp
   38    | Exp . MINEQU Exp
   39    | Exp . STAEQU Exp
   40    | Exp . DIVEQU Exp
   41    | Exp . REMEQU Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   49    | Exp . REM Exp
   50    | LP Exp . RP
   59    | Exp . SELPL
   60    | Exp . SELMI

    RELOP     shift, and go to state 74
    RP        shift, and go to state 98
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    REM       shift, and go to state 80
    SELPL     shift, and go to state 81
    SELMI     shift, and go to state 82
    ASSIGNOP  shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    PLUEQU    shift, and go to state 86
    MINEQU    shift, and go to state 87
    STAEQU    shift, and go to state 88
    DIVEQU    shift, and go to state 89
    REMEQU    shift, and go to state 90


state 63

   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . PLUEQU Exp
   38    | Exp . MINEQU Exp
   39    | Exp . STAEQU Exp
   40    | Exp . DIVEQU Exp
   41    | Exp . REMEQU Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   49    | Exp . REM Exp
   59    | Exp . SELPL
   60    | Exp . SELMI
   64 Args: Exp . COMMA Args
   65     | Exp .

    RELOP     shift, and go to state 74
    COMMA     shift, and go to state 99
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    REM       shift, and go to state 80
    SELPL     shift, and go to state 81
    SELMI     shift, and go to state 82
    ASSIGNOP  shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    PLUEQU    shift, and go to state 86
    MINEQU    shift, and go to state 87
    STAEQU    shift, and go to state 88
    DIVEQU    shift, and go to state 89
    REMEQU    shift, and go to state 90

    $default  reduce using rule 65 (Args)


state 64

   63 Exp: LC Args . RC

    RC  shift, and go to state 100


state 65

   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . PLUEQU Exp
   38    | Exp . MINEQU Exp
   39    | Exp . STAEQU Exp
   40    | Exp . DIVEQU Exp
   41    | Exp . REMEQU Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   49    | Exp . REM Exp
   51    | MINUS Exp .
   59    | Exp . SELPL
   60    | Exp . SELMI

    SELPL  shift, and go to state 81
    SELMI  shift, and go to state 82

    $default  reduce using rule 51 (Exp)


state 66

   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . PLUEQU Exp
   38    | Exp . MINEQU Exp
   39    | Exp . STAEQU Exp
   40    | Exp . DIVEQU Exp
   41    | Exp . REMEQU Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   49    | Exp . REM Exp
   59    | Exp . SELPL
   60    | Exp . SELMI
   61    | SELPL Exp .

    SELPL  error (nonassociative)

    $default  reduce using rule 61 (Exp)


state 67

   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . PLUEQU Exp
   38    | Exp . MINEQU Exp
   39    | Exp . STAEQU Exp
   40    | Exp . DIVEQU Exp
   41    | Exp . REMEQU Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   49    | Exp . REM Exp
   59    | Exp . SELPL
   60    | Exp . SELMI
   62    | SELMI Exp .

    SELPL  shift, and go to state 81

    SELMI  error (nonassociative)

    $default  reduce using rule 62 (Exp)


state 68

   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . PLUEQU Exp
   38    | Exp . MINEQU Exp
   39    | Exp . STAEQU Exp
   40    | Exp . DIVEQU Exp
   41    | Exp . REMEQU Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   49    | Exp . REM Exp
   52    | NOT Exp .
   59    | Exp . SELPL
   60    | Exp . SELMI

    SELPL  shift, and go to state 81
    SELMI  shift, and go to state 82

    $default  reduce using rule 52 (Exp)


state 69

   22 Stmt: IF LP . Exp RP Stmt
   23     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 101


state 70

   24 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 102


state 71

   21 Stmt: RETURN Exp . SEMI
   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . PLUEQU Exp
   38    | Exp . MINEQU Exp
   39    | Exp . STAEQU Exp
   40    | Exp . DIVEQU Exp
   41    | Exp . REMEQU Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   49    | Exp . REM Exp
   59    | Exp . SELPL
   60    | Exp . SELMI

    RELOP     shift, and go to state 74
    SEMI      shift, and go to state 103
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    REM       shift, and go to state 80
    SELPL     shift, and go to state 81
    SELMI     shift, and go to state 82
    ASSIGNOP  shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    PLUEQU    shift, and go to state 86
    MINEQU    shift, and go to state 87
    STAEQU    shift, and go to state 88
    DIVEQU    shift, and go to state 89
    REMEQU    shift, and go to state 90


state 72

   16 CompSt: LC DefList StmList RC .

    $default  reduce using rule 16 (CompSt)


state 73

   18 StmList: Stmt StmList .

    $default  reduce using rule 18 (StmList)


state 74

   44 Exp: Exp RELOP . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 104


state 75

   19 Stmt: Exp SEMI .

    $default  reduce using rule 19 (Stmt)


state 76

   45 Exp: Exp PLUS . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 105


state 77

   46 Exp: Exp MINUS . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 106


state 78

   47 Exp: Exp STAR . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 107


state 79

   48 Exp: Exp DIV . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 108


state 80

   49 Exp: Exp REM . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 109


state 81

   59 Exp: Exp SELPL .

    $default  reduce using rule 59 (Exp)


state 82

   60 Exp: Exp SELMI .

    $default  reduce using rule 60 (Exp)


state 83

   36 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 110


state 84

   42 Exp: Exp AND . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 111


state 85

   43 Exp: Exp OR . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 112


state 86

   37 Exp: Exp PLUEQU . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 113


state 87

   38 Exp: Exp MINEQU . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    CHAR   shift, and go to state 39
    LP     shift, and go to state 40
    LC     shift, and go to state 61
    MINUS  shift, and go to state 42
    SELPL  shift, and go to state 43
    SELMI  shift, and go to state 44
    NOT    shift, and go to state 45

    Exp  go to state 114


state 88

   39 Exp: Exp STAEQU . Exp
